chnages for development and production env

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,7 @@
-REACT_APP_API_KEY = "AIzaSyC9v18oG2TSDw9lKO2ENLZDzMuB9YqRM8k"
-REACT_APP_APP_ID = "1:269408963187:web:4dc68717014a0c4af8f806"
-REACT_APP_PROJECT_ID = "expense-manager-6c808"
-REACT_APP_AUTH_DOMAIN="expense-manager-6c808.firebaseapp.com"
+REACT_APP_API_KEY = "AIzaSyC4qTa2E0aknPA5jWZ2sfNZW-A6D4Ouf_A"
+REACT_APP_AUTH_DOMAIN="expense-manager-developm-1b775.firebaseapp.com"
+REACT_APP_PROJECT_ID = "expense-manager-developm-1b775"
+REACT_APP_STORAGE_BUCKET="expense-manager-developm-1b775.appspot.com"
+REACT_APP_MESSAGING_SENDER_ID="339518914319"
+REACT_APP_APP_ID = "1:339518914319:web:b40ec70f2dfef510d4887a"
+
